--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
+    "babel-runtime": "^6.26.0",
     "meteor-node-stubs": "^0.3.2"
   }
 }
