--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "todos",
+  "name": "Werewolf",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.36",
+    "@babel/runtime": "^7.0.0-beta.40",
     "babel-runtime": "^6.26.0",
-    "meteor-node-stubs": "^0.3.2"
+    "meteor-node-stubs": "^0.3.2",
+    "prerender-node": "^3.1.1"
   }
 }
